[package]
name = "tes3"
version = "0.0.1"
authors = ["Greatness7 <Greatness7@gmail.com>"]
edition = "2021"
description = "A library for working with TES3 content"
repository = "https://github.com/Greatness7/tes3"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["TES3", "Morrowind"]
categories = ["Game development"]

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["libs/*"]

[dependencies]
esp = { path = "libs/esp", optional = true }
nif = { path = "libs/nif", optional = true }
wasm-bindgen = "0.2.92"

[dev-dependencies]
rayon = "^1.5"
tempfile = "^3.2"
walkdir = "^2.3"

[features]
default = ["esp", "nif"]
nightly = ["esp/nightly", "nif/nightly"]
wasm = ["esp/wasm"]
