[package]
name = "tes3"
description = "A library for working with TES3 content"
keywords = ["TES3", "Morrowind"]
categories = ["Game development"]
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
authors = ["Greatness7 <Greatness7@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Greatness7/tes3"

[workspace]
members = ["libs/*"]

[dependencies]
esp = { path = "libs/esp", optional = true }
nif = { path = "libs/nif", optional = true }

[features]
default = ["esp", "nif"]
nightly = ["esp?/nightly", "nif?/nightly"]
serde = ["esp?/serde"]
serde-zstd = ["esp?/zstd"]
simd = ["esp?/simd", "nif?/simd"]

# Lint Configuration

[workspace.lints.rust]
#
# Lint Groups
# https://doc.rust-lang.org/rustc/lints/groups.html
#
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
stable_features = "allow" # extract_if
#
# Allowed-by-default Lints
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
#
absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_debug_implementations = "warn"
# missing_docs = "warn"
non_ascii_idents = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
# unreachable_pub = "warn"
# unsafe_code = "warn"
# unsafe_op_in_unsafe_fn = "warn"
# unstable_features = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
# unused_results = "warn"
dead_code = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
#
# Clippy Group: Cargo
# https://rust-lang.github.io/rust-clippy/master/index.html#?groups=cargo
#
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
#
# Clippy Group: Pedantic
# https://rust-lang.github.io/rust-clippy/master/index.html#?groups=pedantic
#
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
unreadable_literal = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
ignored_unit_patterns = "allow"
match_wildcard_for_single_variants = "allow"
unsafe_derive_deserialize = "allow"
multiple_crate_versions = "allow"
wildcard_imports = "allow"
needless_continue = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
#
# Clippy Group: Nursery
# https://rust-lang.github.io/rust-clippy/master/index.html#?groups=nursery
#
nursery = { level = "warn", priority = -1 }
use_self = "allow"
missing-const-for-fn = "allow"
#
# Clippy Group: Restriction
# https://rust-lang.github.io/rust-clippy/master/index.html#?groups=restriction
#
# restriction = { level = "warn", priority = -1 }
separated_literal_suffix = "warn"
# panic = "warn"
# expect_used = "warn"
# unwrap_used = "warn"
# as_conversions = "warn"
