[package]
name = "esp"
version = "0.0.0"
edition = "2021"

[dependencies]
bstr = { version = "^0.2", default-features = false, features = ["std"] }
bytemuck = { version = "^1.9", features = ["derive", "extern_crate_alloc"] }
bytes_io = { path = "../bytes_io" }
derive_more = "^0.99"
bitflags = "^1.3"
esp_macros = { path = "../esp_macros" }
hashbrown = { version = "^0.12", features = ["rayon"] }
rayon = "^1.5"
smart-default = "^0.6"
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["wasm"]
nightly = ["bytes_io/nightly", "hashbrown/nightly"]
wasm = ["wasm-bindgen"]