[package]
name = "esp"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitflags = { version = "^2.10" }
bstr = { version = "^1.12", default-features = false, features = ["std"] }
bytemuck = { version = "^1.24", features = ["derive"] }
bytes_io = { path = "../bytes_io" }
cow-utils = "^0.1"
derive_more = { version = "^2.0", features = ["deref", "deref_mut", "from", "into" ] }
esp_macros = { path = "../esp_macros" }
glam = "^0.30"
hashbrown = { version = "^0.16", features = ["rayon"] }
itoa = "^1.0"
rayon = "^1.11"
smart-default = "^0.7"
# serde-related features
base64-simd = { version = "^0.8", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
zstd = { version = "^0.13", optional = true }

[dev-dependencies]
tempfile = "^3.23"
serde_json = "^1.0"

[features]
default = []
nightly = ["bytes_io/nightly"]
simd = ["bytes_io/simd"]
serde = [
    "dep:serde",
    "dep:base64-simd",
    "bitflags/serde",
    "bstr/serde",
    "esp_macros/serde",
    "hashbrown/serde",
]

[lints]
workspace = true
