[package]
name = "esp_macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
cfg-if = "^1.0"
quote = "^1.0"
syn = { version = "^2.0", features = [ "visit", "visit-mut" ] }

[features]
default = []
