[package]
name = "nif"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bstr = { version = "^1.6", default-features = false, features = ["std"] }
bytemuck = { version = "^1.14", features = ["derive"] }
bytes_io = { path = "../bytes_io", features = ["glam"] }
derive_more = { version = "^2.0", features = ["deref", "deref_mut", "from", "into" ] }
glam = "^0.29"
hashbrown = "^0.15"
nif_macros = { path = "../nif_macros" }
paste = "^1.0"
slotmap = "^1.0"
smart-default = "^0.7"

[dev-dependencies]
tempfile = "^3.8"

[features]
default = []
nightly = ["bytes_io/nightly"]
simd = ["bytes_io/simd", "glam/core-simd"]

[lints]
workspace = true
