[package]
name = "nif_macros"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
dashmap = "^5.4"
hashbrown = { version = ">=0.12, <1.0", features = ["rayon"] }
once_cell = "^1.17"
quote = "^1.0"
syn = "^2.0"
